# suiteworld-hackathon-2025

./: .replit  README.md  anomaly_detector.py  api.py  app.py  data_handler.py  data_storage.py  forecasting_engine.py  insights_generator.py  pyproject.toml  replit.md  report_generator.py  utils.py
api_data/: train_inventory.json  tune_inflows.json  tune_inventory.json  tune_outflows.json
attached_assets/: train_inflows_1759770514597.csv  train_inventory_1759770514597.csv  train_outflows_1759770514596.csv  tune_inflows - csv_1759772587803.csv  tune_inflows_1759772318089.xlsx  tune_inventory - csv_1759772587802.csv  tune_inventory_1759772318090.xlsx  tune_outflows - csv_1759772587801.csv  tune_outflows_1759772318090.xlsx
modules/: anomaly_detection.py  data_processor.py  forecasting.py  insights_engine.py  statistical_analysis.py  visualization.py
src/: data_loader.py  data_processor.py  forecasting_model.py  statistical_analyzer.py
