[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fpdf>=1.7.2",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "prophet>=1.1.7",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "statsmodels>=0.14.5",
    "streamlit>=1.50.0",
    "tarsafe>=0.0.5",
]
